# faststream-helper

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  rpc.py
.zed/: settings.json  tasks.json
client/: Dockerfile  index.html  index.js  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx
common/contracts/: project.py  projects_service.py
common/lib/: broker.py  dependencies.py  rpc.py
common/protocols/: __init__.py  events.py  projects.py  secrets.py
contracts/: project.py
services/: projects.py  users.py
services/api_gateway/: Dockerfile  main.py  pyproject.toml
services/projects/: Dockerfile  pyproject.toml
services/projects/app/: main.py  service.py
services/projects_service/: .env.develop  Dockerfile  pyproject.toml
services/projects_service/app/: main.py  service.py  settings.py
services/projects_service/tests/: test_projects.py
services/secrets_service/: Dockerfile  pyproject.toml
services/secrets_service/app/: main.py  service.py
services/users/: main.py
tests/: test_projects.py
